Docs reparaciones
